Fix spinner
The up - down buttons were overlapping with the spinnner value, causing it to be invisible. Fixed by aligning the value to the left instead of to the right.

--- a/src/main/webapp/resources/default/css/main.css
+++ b/src/main/webapp/resources/default/css/main.css
@@ -3,6 +3,11 @@
 }*/
 
 
+.ui-spinner-input{
+    text-align: left;
+}
+
+/*
 @font-face {
     font-family:"Roboto";
     src:local(Roboto Thin),url("#{resource['materialize/fonts/roboto/Roboto-Thin.eot']}");
@@ -48,4 +53,4 @@
     src:url("../fonts/roboto/Roboto-Bold.eot");
     src:url("../fonts/roboto/Roboto-Bold.eot?#iefix") format("embedded-opentype"),url("../fonts/roboto/Roboto-Bold.woff2") format("woff2"),url("../fonts/roboto/Roboto-Bold.woff") format("woff"),url("../fonts/roboto/Roboto-Bold.ttf") format("truetype");
     font-weight:700
-}
+}*/
